# ai-aid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
deploy/backup/: backup.sh  cron.example
deploy/nginx/: README.md  (+1 more)
server/: .dockerignore  Dockerfile  migration_runner.py  pyproject.toml
server/.claude/: launch.json
server/ai_aid/: config.py  db.py  errors.py  events.py  logging_setup.py  main.py  models.py  rate_limit.py
server/ai_aid/routes/: answers.py  attachments.py  health.py  lifecycle.py  metrics.py  quality.py  recent.py  requests.py  sse.py  stats.py
server/migrations/: 001_init.sql  002_quality_signals.sql  003_attachments.sql
server/tests/: conftest.py
server/tests/e2e/: conftest.py  test_body_size_real.py  test_concurrency.py  test_crash_recovery.py  test_migration_safety.py  test_sse_under_load.py  test_two_ai_flow.py  test_unicode.py
server/tests/integration/: test_attachments.py  test_close_request.py  test_delete_request.py  test_error_shape.py  test_event_emission.py  test_get_request_detail.py  test_get_requests.py  test_health.py  test_logging.py  test_metrics.py  test_post_answers.py  test_post_requests.py  test_quality.py  test_recent.py  test_retention.py  test_sse.py  test_sse_filter.py  test_sse_replay.py  test_stats.py
server/tests/unit/: test_config.py  test_db.py  test_db_ext.py  test_errors.py  test_events.py  test_migrations.py  test_models.py  test_rate_limit.py
skills/: INSTALL_AGENT.md  MANUAL.md  README.md
web/: app.js  index.html  style.css
(+53 files in other folders)
